<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_shopping_cart"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/cart_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:stretchColumns="0"/>
            <Button
                android:id="@+id/submit_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="80dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/colorAccent"
                android:text="@string/submit_order"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/colorWhite"
            android:layout_toStartOf="@+id/cart_total"
            android:layout_marginEnd="10dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cart_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_placeholder"
            android:textColor="@color/colorWhite"
            android:layout_alignParentEnd="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
